--- a/soso/app/src/main/res/values/strings.xml
+++ b/soso/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">soso</string>
-    <string name="info">주소 : 경기도 수원시 장안구 화산로, 85  \n이름:소윤이네 \n컨텐츠타입 : 짱 편한한 우리집</string>
+    <string name="info">경기도 수원시 장안구 화산로, 85</string>
+    <string name="spot_name">소윤이네</string>
 </resources>
