--- a/soso/app/src/main/res/values/strings.xml
+++ b/soso/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">soso</string>
+    <string name="app_name">뚜벅이</string>
     <string name="info">경기도 수원시 장안구 화산로, 85</string>
     <string name="spot_name">소윤이네</string>
 </resources>
