--- a/SignInWithGoogle/app/src/main/res/values/strings.xml
+++ b/SignInWithGoogle/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SignInWithGoogle</string>
+    <string name="app_name">뚜벅이</string>
     <string name="label_google_sign_in">Firebase + Google Sign In</string>
     <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
     <string name="label_firebase_ui">FirebaseUI Auth</string>
@@ -37,4 +37,18 @@
 
     <string name="google_status_fmt">Google User: %s</string>
     <string name="google_title_text">Google Sign In</string>
+    <string name="info">경기도 수원시 장안구 화산로, 85</string>
+    <string name="spot_name">소윤이네</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_fragment__search_result">fragment_SearchResult</string>
+    <string name="tab_text_1">All</string>
+    <string name="tab_text_2">Tour spot </string>
+    <string name="tab_text_3">Cultural Facility </string>
+    <string name="tab_text_4">Event</string>
+    <string name="tab_text_5">Course</string>
+    <string name="tab_text_6">Leports</string>
+    <string name="tab_text_7">Accommodation</string>
+    <string name="tab_text_8">Shopping</string>
+    <string name="tab_text_9">Food</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
