--- a/SignInWithGoogle/app/src/main/res/values/strings.xml
+++ b/SignInWithGoogle/app/src/main/res/values/strings.xml
@@ -37,8 +37,9 @@
 
     <string name="google_status_fmt">Google User: %s</string>
     <string name="google_title_text">Google Sign In</string>
-    <string name="info">경기도 수원시 장안구 화산로, 85</string>
-    <string name="spot_name">소윤이네</string>
+    <string name="info1">웹사이트</string>
+    <string name="info2">피드백보내기</string>
+    <string name="info3">개발자 정보\n White Sneakers </string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_fragment__search_result">fragment_SearchResult</string>
     <string name="tab_text_1">All</string>
