--- a/SignInWithGoogle/app/src/main/res/values/strings.xml
+++ b/SignInWithGoogle/app/src/main/res/values/strings.xml
@@ -37,9 +37,9 @@
 
     <string name="google_status_fmt">Google User: %s</string>
     <string name="google_title_text">Google Sign In</string>
-    <string name="info1">Visit Buggy WebSite</string>
-    <string name="info2">We love any feedback \n Send us E-mail</string>
-    <string name="info3">Developer Information\n White Sneakers </string>
+    <string name="info1">웹사이트</string>
+    <string name="info2">피드백보내기</string>
+    <string name="info3">개발자 정보\n White Sneakers </string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_fragment__search_result">fragment_SearchResult</string>
     <string name="tab_text_1">All</string>
