--- a/SignInWithGoogle/app/src/main/res/values/strings.xml
+++ b/SignInWithGoogle/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="google_title_text">Google Sign In</string>
     <string name="info1">Visit Buggy WebSite</string>
     <string name="info2">We love any feedback \n Send us E-mail</string>
-    <string name="info3">Developer Information\n White Sneakers </string>
+    <string name="info3">Tutorial \n Buggy will be best friend during your travel</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_fragment__search_result">fragment_SearchResult</string>
     <string name="tab_text_1">All</string>
